--- a/css/media.css
+++ b/css/media.css
@@ -10,9 +10,9 @@
 
 /*// Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
-	.red{
+/*	.red{
 		display: none;
-	}
+	}*/
 }
 
 /*// Medium devices (tablets, 768px and up)*/
